--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ authors = ["Zoey <Dessix@Dessix.net>"]
 
 [dependencies]
 maplit = "1.0.1"
-nix = "*"
+toml = "0.4.6"
+xdg = "^2.1"
 
 [build-dependencies]
 bindgen = "*"
