--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,12 @@ authors = ["Zoey <Dessix@Dessix.net>"]
 
 [dependencies]
 dirs = "^2.0.1"
-enigo = "~0.0.13"
 maplit = "^1.0.1"
 toml = "^0.5.1"
 xdg = "^2"
+serde = "^1.0.94"
+serde_derive = "^1.0.94"
+libc = "~0.2.58"
 
 [build-dependencies]
 bindgen = "^0.49.3"
