--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ xdg = "^2"
 serde = "^1.0.94"
 serde_derive = "^1.0.94"
 libc = "~0.2.58"
+strum = "^0.15.0"
+strum_macros = "^0.15.0"
 
 [build-dependencies]
 bindgen = "^0.49.3"
