--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ dirs = "^2.0.2"
 maplit = "^1.0.2"
 toml = "^0.5.3"
 xdg = "^2.2"
+evdev-rs = "^0.3.0"
 serde = "^1.0.101"
 serde_derive = "^1.0.101"
 serde_json = "^1.0.41"
